welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:3: error: value droite is not a member of Unit
         	gauche();avance();baisseBrosse();droite();leveBrosse();avance();baisseBrosse()droite();leveBrosse();avance();
                                                                                              ^